# devcontainer_poetry_fastapi_template

./: .dockerignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
fastapi_project/: main.py
